// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should render button component contained 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderRadius": 42,
      },
      Object {
        "shadowColor": "#AEAEAE",
      },
    ]
  }
  testID="button"
  type="contained"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Should render button component outlined 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderColor": "#FFFFFF",
        "borderRadius": 42,
        "borderWidth": 1,
      },
      Object {},
    ]
  }
  testID="button"
  type="outlined"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Should render button component text 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#AEAEAE",
        "borderRadius": 42,
      },
      Object {},
    ]
  }
  testID="button"
  type="text"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontSize": 14,
          "letterSpacing": 1,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;
